--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Max-Andre Zils</title>
-    <link href="_/components/bootstrap/dist/css/bootstrap.css">
+    <link href="_/components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <script src="_/components/angular/angular.js"></script>
+    <script src=""></script>
 </head>
 <body>
+<h1>Hello World</h1><div class="main">
 
+    </div>
+    <footer></footer>
 </body>
 </html>
-
 <!--
-Copyright (c) 2015 by Placeholder Corporation. All Rights Reserved.
+Copyright (c) 2015 by Max-Andre Zils. All Rights Reserved.
  -->
